--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   gtag('config', 'AW-811417967');
 </script> <script type="6baf546f548a8433792ff8b3-text/javascript">
   gtag('event', 'conversion', {'send_to': 'AW-811417967/sPpnCIakvbYBEO-C9YID'});
-</script> <script type="6baf546f548a8433792ff8b3-text/javascript">
+</script> 
+ 
+  <!-- Facebook Pixel Code -->
+<script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
   n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -21,9 +24,15 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '513708472634027');
+  fbq('init', '1552101521636668');
   fbq('track', 'PageView');
-</script> <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=513708472634027&ev=PageView&noscript=1"/></noscript> <style type="text/css"></style> </head> <body> <div id="fb-root"></div> <script type="6baf546f548a8433792ff8b3-text/javascript">
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=1552101521636668&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
+
+  <style type="text/css"></style> </head> <body> <div id="fb-root"></div> <script type="6baf546f548a8433792ff8b3-text/javascript">
   (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) return;
